# pokeplatinum

./: .gitattributes  .gitignore  ARM9-TS.lcf.template  CMakeLists.txt  build.sh  config.sh  log.txt  mwldarm.response.template
lib/NitroDWC/: CMakeLists.txt
lib/NitroDWC/asm/util/: atermset.s
lib/NitroDWC/include/: dwc.h  dwc_version.h
lib/NitroDWC/include/ac/: dwc_ac.h
lib/NitroDWC/include/auth/: dwc_auth.h  dwc_http.h  dwc_netcheck.h  dwc_prof.h  dwc_svl.h  util_alloc.h  util_base64.h
lib/NitroDWC/include/base/: dwc_account.h  dwc_base_gamespy.h  dwc_common.h  dwc_connectinet.h  dwc_core.h  dwc_error.h  dwc_friend.h  dwc_ghttp.h  dwc_init.h  dwc_login.h  dwc_main.h  dwc_match.h  dwc_memfunc.h  dwc_nasfunc.h  dwc_nd.h  dwc_ranking.h  dwc_report.h  dwc_transport.h
lib/NitroDWC/include/bm/: dwc_bm_init.h  util_wifiidtool.h
lib/NitroDWC/include/gs/: available.h  core.h  darray.h  dummy_auth.h  gsiDebug.h  gsiMemory.h  hashtable.h  md5.h  nonport.h  soap.h  stringutil.h
lib/NitroDWC/include/gs/chat/: chat.h  chatASCII.h  chatCallbacks.h  chatChannel.h  chatHandlers.h  chatMain.h  chatSocket.h
lib/NitroDWC/include/gs/ghttp/: ghttp.h  ghttpASCII.h  ghttpBuffer.h  ghttpCallbacks.h  ghttpCommon.h  ghttpConnection.h  ghttpEncryption.h  ghttpMain.h  ghttpPost.h  ghttpProcess.h
lib/NitroDWC/include/gs/gp/: gp.h  gpi.h  gpiBuddy.h  gpiBuffer.h  gpiCallback.h  gpiConnect.h  gpiInfo.h  gpiOperation.h  gpiPeer.h  gpiProfile.h  gpiSearch.h  gpiTransfer.h  gpiUnique.h  gpiUtility.h
lib/NitroDWC/include/gs/gstats/: gbucket.h  gpersist.h  gstats.h
lib/NitroDWC/include/gs/gt2/: gt2.h  gt2Auth.h  gt2Buffer.h  gt2Callback.h  gt2Connection.h  gt2Encode.h  gt2Filter.h  gt2Main.h  gt2Message.h  gt2Socket.h  gt2Utility.h
lib/NitroDWC/include/gs/natneg/: natneg.h  nninternal.h
lib/NitroDWC/include/gs/qr2/: qr2.h  qr2regkeys.h
lib/NitroDWC/include/gs/serverbrowsing/: sb_ascii.h  sb_crypt.h  sb_internal.h  sb_serverbrowsing.h
lib/NitroDWC/include/nd/: DWCi_Nd.h
lib/NitroDWC/include/nhttp/: NHTTP.h
lib/NitroDWC/include/ranking/: dwc_ranksession.h
lib/NitroDWC/include/util/: dwc_utility.h
lib/NitroDWC/libraries/ac/: CMakeLists.txt
lib/NitroDWC/libraries/account/: CMakeLists.txt
lib/NitroDWC/libraries/account/src/: dwc_account.c  dwc_init.c  dwc_report.c
lib/NitroDWC/libraries/auth/: CMakeLists.txt
lib/NitroDWC/libraries/base/: CMakeLists.txt
lib/NitroDWC/libraries/base/src/: dwc_common.c  (+12 more)
lib/NitroDWC/libraries/bm/: CMakeLists.txt
lib/NitroDWC/libraries/gamespy/: CMakeLists.txt
lib/NitroDWC/libraries/nd/: CMakeLists.txt
lib/NitroDWC/libraries/nhttp/: CMakeLists.txt
lib/NitroDWC/libraries/ranking/: CMakeLists.txt
lib/NitroDWC/libraries/util/: CMakeLists.txt
lib/NitroSDK/: CMakeLists.txt  build.sh
lib/NitroSDK/include/: nitro.h  nitro.mch  nitro_sp.h  nitro_win32.h
lib/NitroSDK/include/nitro/: card.h  cht.h  code16.h  code32.h  codereset.h  cp.h  ctrdg.h  dtcm_begin.h  dtcm_end.h  env.h  exi.h  ext.h  fs.h  gx.h  ioreg.h  itcm_begin.h  itcm_end.h  math.h  mb.h  memorymap.h  memorymap_sp.h  mi.h  misc.h  os.h  os_sp.h  pad.h  parent_begin.h  parent_end.h  platform.h  prc.h  pxi.h  rtc.h  section.h  sinit.h  snd.h  snd_sp.h  spec.h  spi.h  std.h  types.h  (+10 more)
lib/NitroSDK/libraries/card/: CMakeLists.txt
lib/NitroSDK/libraries/cht/: CMakeLists.txt
lib/NitroSDK/libraries/cp/: CMakeLists.txt
lib/NitroSDK/libraries/ctrdg/: CMakeLists.txt
lib/NitroSDK/libraries/dgt/: CMakeLists.txt
lib/NitroSDK/libraries/e3s/: CMakeLists.txt
lib/NitroSDK/libraries/env/: CMakeLists.txt
lib/NitroSDK/libraries/ext/: CMakeLists.txt
lib/NitroSDK/libraries/fs/: CMakeLists.txt
lib/NitroSDK/libraries/fx/: CMakeLists.txt
lib/NitroSDK/libraries/gx/: CMakeLists.txt
lib/NitroSDK/libraries/init/: CMakeLists.txt
lib/NitroSDK/libraries/math/: CMakeLists.txt
lib/NitroSDK/libraries/mb/: CMakeLists.txt
lib/NitroSDK/libraries/mi/: CMakeLists.txt
lib/NitroSDK/libraries/os/: CMakeLists.txt
lib/NitroSDK/libraries/prc/: CMakeLists.txt
lib/NitroSDK/libraries/pxi/: CMakeLists.txt
lib/NitroSDK/libraries/rtc/: CMakeLists.txt
lib/NitroSDK/libraries/snd/: CMakeLists.txt
lib/NitroSDK/libraries/spi/: CMakeLists.txt
lib/NitroSDK/libraries/std/: CMakeLists.txt
lib/NitroSDK/libraries/stubs/: CMakeLists.txt
lib/NitroSDK/libraries/utest/: CMakeLists.txt
lib/NitroSDK/libraries/wbt/: CMakeLists.txt
lib/NitroSDK/libraries/wfs/: CMakeLists.txt
lib/NitroSDK/libraries/wm/: CMakeLists.txt
lib/NitroSDK/libraries/wvr/: CMakeLists.txt
lib/NitroSystem/: CMakeLists.txt
lib/NitroSystem/include/: nnsys_prefix.h  nnsys_win32.h
lib/NitroSystem/include/nnsys/: inline.h  mcs.h  misc.h  snd.h
lib/NitroSystem/libraries/fnd/: CMakeLists.txt
lib/NitroSystem/libraries/g2d/: CMakeLists.txt
lib/NitroSystem/libraries/g3d/: CMakeLists.txt
lib/NitroSystem/libraries/gfd/: CMakeLists.txt
lib/NitroSystem/libraries/mcs/: CMakeLists.txt
lib/NitroSystem/libraries/snd/: CMakeLists.txt
lib/NitroWiFi/: CMakeLists.txt
lib/NitroWiFi/include/: ninet.h  nitroWiFi.h  nitroWiFi_noso.h
lib/NitroWiFi/include/ninet/: ip.h
lib/NitroWiFi/include/nitroWiFi/: cps.h  iw2wcm.h  so2soc.h  soc.h  soc_errcode.h  soc_stub.h  socket.h  socl.h  ssl.h  wcm.h
lib/NitroWiFi/libraries/cps/: CMakeLists.txt
lib/NitroWiFi/libraries/soc/: CMakeLists.txt
lib/NitroWiFi/libraries/ssl/: CMakeLists.txt
lib/NitroWiFi/libraries/stubs/: CMakeLists.txt
lib/NitroWiFi/libraries/wcm/: CMakeLists.txt
lib/cw/: CMakeLists.txt
lib/cw/Profiler/: Profiler_Notes_ARM.txt
lib/gamespy/: CMakeLists.txt
lib/libVCT/: CMakeLists.txt
lib/msl/: CMakeLists.txt
lib/ppwlobby/: CMakeLists.txt
lib/syscall/: CMakeLists.txt
lib/syscall/asm/: _secure.s
tools/: CMakeLists.txt
tools/asmdiff/: CMakeLists.txt
tools/cw/: codewarrior.toolchain.cmake  codewarrior.toolchain_sp2.cmake
tools/cw/2.0/sp2/: codewarrior.toolchain.cmake
tools/cw/2.0/sp2p2/: codewarrior.toolchain.cmake  wrapper.sh.in
tools/fixrom/: CMakeLists.txt
tools/gen_fx_consts/: CMakeLists.txt
tools/mwasmarm_patcher/: CMakeLists.txt
(+779 files in other folders)
