add_library(FP_fastI_v5t_LE STATIC IMPORTED)
set_property(TARGET FP_fastI_v5t_LE PROPERTY IMPORTED_LOCATION "Mathlib/lib/FP_fastI_v5t_LE.a")

add_library(NITRO_Runtime_Ai_LE STATIC IMPORTED)
set_property(TARGET NITRO_Runtime_Ai_LE PROPERTY IMPORTED_LOCATION "Runtime/Runtime_ARM/Runtime_NITRO/Lib/NITRO_Runtime_Ai_LE.a")

add_library(MSL_Extras_NITRO_Ai_LE STATIC IMPORTED)
set_property(TARGET MSL_Extras_NITRO_Ai_LE PROPERTY IMPORTED_LOCATION "msl/MSL_Extras/MSL_ARM/Lib/MSL_Extras_NITRO_Ai_LE.a")

add_library(MSL_C_NITRO_Ai_LE STATIC IMPORTED)
set_property(TARGET MSL_C_NITRO_Ai_LE PROPERTY IMPORTED_LOCATION "msl/MSL_C/MSL_ARM/Lib/MSL_C_NITRO_Ai_LE.a")

add_library(MSL_CPP_NITRO_Ai_LE STATIC IMPORTED)
set_property(TARGET MSL_CPP_NITRO_Ai_LE PROPERTY IMPORTED_LOCATION "msl/MSL_C++/MSL_ARM/Lib/MSL_CPP_NITRO_Ai_LE.a")
